k8s/old-infra/k8s-prod/ingress-depl.yaml
#
# TODO: Find a way to pass the domain and top-level domain as env vars to this configuration and
#   not hardcode 'www.ticketing-test-prod-app.xyz'
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.4
          args:
            - --api=true
            - --api.dashboard=true

            - --accesslog

            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443

            - --certificatesresolvers.letsencrypt.acme.email=md.staicu@yahoo.com
            #
            # TODO: Depending on the cloud platform, provision a persistent volume claim
            # in order to save the certificates
            #
            - --certificatesresolvers.letsencrypt.acme.storage=/acme/acme.json
            - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
            - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=http

            - --providers.kubernetescrd
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`)
      kind: Rule
      services:
        - name: client-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`)
      kind: Rule
      services:
        - name: client-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ticket-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/tickets`)
      kind: Rule
      middlewares:
        - name: strip-ticket-prefix
      services:
        - name: tickets-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ticket-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/tickets`)
      kind: Rule
      middlewares:
        - name: strip-ticket-prefix
      services:
        - name: tickets-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: order-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/orders`)
      kind: Rule
      middlewares:
        - name: strip-order-prefix
      services:
        - name: orders-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: order-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/orders`)
      kind: Rule
      middlewares:
        - name: strip-order-prefix
      services:
        - name: orders-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: payments-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: payments-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: payments-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/payments`)
      kind: Rule
      middlewares:
        - name: strip-payments-prefix
      services:
        - name: payments-srv
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: subscriptions-ingress-route-https
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/subscriptions`)
      kind: Rule
      middlewares:
        - name: strip-subscriptions-prefix
      services:
        - name: subscriptions-srv
          port: 3000
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: subscriptions-ingress-route-http
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && PathPrefix(`/api/subscriptions`)
      kind: Rule
      middlewares:
        - name: strip-subscriptions-prefix
      services:
        - name: subscriptions-srv
          port: 3000
---
#
# TODO: Secure the dashboard access
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`www.ticketing-test-prod-app.xyz`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      priority: 40
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.ticketing-test-prod-app.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ticket-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/tickets
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-order-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/orders
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-payments-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/payments
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-subscriptions-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/subscriptions
